# tatted

./: Cargo.toml  README.md  flake.nix
libtatted/: Cargo.toml
libtatted/src/: colormap.rs  eeprom.rs  error.rs  image.rs  jd79668.rs  lib.rs  peripherals.rs
libtatted/src/colormap/: inky_map.rs  mod.rs  mono_map.rs
tatctl/: Cargo.toml
tatctl/src/: lib.rs  main.rs
